--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,18 +4,34 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
+    branches:
+      - main
 
 env:
   ACCOUNT_NAME: rtav3d
   IMAGE_NAME: soloanvill-backend
-  IMAGE_VERSION: 0.1.3
+  IMAGE_VERSION: 0.1.4
   HOST_PORT: 80
   CONTAINER_PORT: 8080
   PROJECT_NAME: soloanvill_backend
 
 jobs:
+  lint:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.1
+
   build_and_test:
     runs-on: ubuntu-24.04
+    needs: lint
 
     steps:
     - name: Checkout repository
@@ -66,6 +82,7 @@ jobs:
   update_k3s_repo:
     runs-on: ubuntu-24.04
     needs: build_and_test
+    if: github.ref == 'refs/heads/master'
     
     steps:
     - name: Checkout repository K3s
